2009-12-29  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Need a script to assign bugs with r+ patches to committers for landing
        https://bugs.webkit.org/show_bug.cgi?id=33009

        This is just one more small tool to help in the fight against our
        ever-growing list of to-be-committed patches.

        * Scripts/modules/bugzilla.py:
         - Rename assign_to_email to assigned_to_email (typo).
         - Add assigned_to_email() method on Bug.
         - Add reassign_bug method.
         - Add Bugzilla.unassigned_email, eventually should move to some webkit_config.py module.
        * Scripts/modules/bugzilla_unittest.py:
         - Update test after assigned_to_email rename.
        * Scripts/modules/commands/commandtest.py:
         - Call bind_to_tool to that self.tool works in Command testing.
        * Scripts/modules/commands/download.py:
         - Move AbstractDeclarativeCommmand multicommandtool.py, it should be part of Command.
        * Scripts/modules/commands/queries_unittest.py:
         - One of the test patches is now posted by "eric@webkit.org" which is a committer.
         - Eventually we'll mock out CommitterList and be able to better control what's a committer and what's not.
        * Scripts/modules/commands/upload.py:
         - Add new assign-to-committer command.
        * Scripts/modules/commands/upload_unittest.py:
         - Add basic assign-to-committer test.
        * Scripts/modules/committers.py:
         - Add bugzilla_email() accessor.
        * Scripts/modules/committers_unittest.py:
         - Test our assumption that bugzilla_email is the first email.
        * Scripts/modules/mock_bugzillatool.py:
         - Add _id_to_object_dictionary for generating bug_cache from list of bugs.
         - Remove unused fetch_attachments_from_bug.
         - Add fetch_bug support and a bug_cache.
        * Scripts/modules/multicommandtool.py: